# Lab1

./: CMakeLists.txt  README.md
Practical_1/: main.cpp
SpaceInvaders/: main.cpp  ship.cpp  ship.h
TileEngine/: entity.h  player.cpp
